user 회원가입/로그인

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,6 @@ logging:
   level:
     org.hibernate.SQL: debug    # Logger
     org.hibernate.type: trace   # Show Query Parameter
+
+jwt:
+  secret: hello
