feat : kafka websocket 추가

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,14 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
+    // Kafka
+    implementation("org.springframework.kafka:spring-kafka")
+
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
 }
 
 tasks.named('test') {
