--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,17 +5,16 @@ server:
 spring:
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
         format_sql: true
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: localhost
+    url: jdbc:mysql://localhost:3306/sns
     username: root
-    password: 1q2w3e4r
+    password: 1234
 
 logging:
   level:
