--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    implementation 'javax.servlet:jstl'
+
+    implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
+
 }
 
 tasks.named('test') {
