--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.mysql:mysql-connector-j:8.0.31'
+    implementation 'org.springframework.boot:spring-boot-devtools:2.5.3'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
@@ -49,6 +50,8 @@ dependencies {
     implementation 'javax.servlet:jstl'
 
     implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
+
+
 
 }
 
