feat : 채팅방 disconnet 추가

--- a/src/main/resources/application-redis.yml
+++ b/src/main/resources/application-redis.yml
@@ -1,4 +1,4 @@
 spring:
   redis:
-    host: localhost
-    port: 6379
+    host: ${REDIS_HOST:localhost}  # 환경 변수 REDIS_HOST 사용, 없으면 기본값 localhost
+    port: ${REDIS_PORT:6379}       # 환경 변수 REDIS_PORT 사용, 없으면 기본값 6379
