--- a/src/main/resources/application-mongo.yml
+++ b/src/main/resources/application-mongo.yml
@@ -1,3 +1,3 @@
 mongodb:
-  client: mongodb://localhost:27017
-  name : test
+  client: ${MONGODB_CLIENT:mongodb://localhost:27017}  # 환경 변수 MONGODB_CLIENT 사용, 없으면 기본값 사용
+  name: ${MONGODB_NAME:test}                           # 환경 변수 MONGODB_NAME 사용, 없으면 기본값 사용
