--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/sns
     username: root
-    password: jtt24d47!!
+    password: {SPRING_DATASOURCE_PASSWORD:1234}
 
 logging:
   level:
