Build : Redis 설정 변경

--- a/src/main/resources/application-redis.yml
+++ b/src/main/resources/application-redis.yml
@@ -2,3 +2,4 @@ spring:
   redis:
     host: ${REDIS_HOST:localhost}  # 환경 변수 REDIS_HOST 사용, 없으면 기본값 localhost
     port: ${REDIS_PORT:6379}       # 환경 변수 REDIS_PORT 사용, 없으면 기본값 6379
+    database: 3
