Feat : s3 추가, nickName, userImg 필드 추가, JSP 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,10 @@ spring:
     include:
       - mongo
       - redis
+      - s3
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: false
     properties:
       hibernate:
